--- a/src/utils/i18n/locals/en/en.json
+++ b/src/utils/i18n/locals/en/en.json
@@ -8,28 +8,28 @@
         "nav_button": "Get a Consultation"
     },
     "hero": {
-        "title": "Ross Foundation",
+        "title": "RAI GROUP",
         "subtitle": "Construction, energy, and innovative solutions.",
         "button_text": "Get a Consultation"
     },
     "vacancies_hero": {
-        "title": "Find Your Dream Job with Ross Foundation",
+        "title": "Find Your Dream Job with RAI GROUP",
         "subtitle": "The Team You've Been Waiting For!",
         "button_text": "Join the Team"
     },
     "about": {
         "title": "ABOUT THE COMPANY",
-        "desc": "Ross and Foundation – Your trusted construction partner <br/> 10 years of experience in building business centers and residential complexes! <br/> Ross and Foundation is a construction company playing a key role in shaping the modern architectural landscape of Tashkent. For 10 years, we have been creating business centers and high-quality residential complexes.",
+        "desc": "RAI GROUP – Your trusted construction partner <br/> 6 years of experience in building business centers and residential complexes! <br/> Ross and Foundation is a construction company playing a key role in shaping the modern architectural landscape of Tashkent. For 10 years, we have been creating business centers and high-quality residential complexes.",
         "card1_title": "Projects in the company’s portfolio",
         "card1_desc": "4",
         "card2_title": "Years in the real estate market",
         "card2_desc": "6 years",
         "card3_title": "People living in our projects",
         "card3_desc": "3000",
-        "card4_title": "Residential areas M2",
+        "card4_title": "Residential areas M²",
         "card4_desc": "34,300",
         "fact_title": "5 Facts About the Company",
-        "fact_desc": "Ross and Foundation is a trusted construction company that has been developing business centers and residential complexes for 10 years. We strive to make high quality and modern design accessible to everyone. Our projects are distinguished not only by their durability but also by their functionality and convenient location.",
+        "fact_desc": "RAI GROUP is a trusted construction company that has been developing business centers and residential complexes for 6 years. We strive to make high quality and modern design accessible to everyone. Our projects are distinguished not only by their durability but also by their functionality and convenient location.",
         "fact_card1": "Modern design and functionality",
         "fact_card2": "Reliable partnerships",
         "fact_card3": "High-quality materials",
@@ -57,7 +57,8 @@
         "card6_location": "Anhor Boyi Street, Yunusobod district",
         "card7_title": "Oncowell Company",
         "card7_location": "",
-        "sold": "Sold Out"
+        "sold": "Sold Out",
+        "m":"m²"
     },
     "project_map": {
         "title": "Our Projects Across Tashkent",
@@ -95,17 +96,17 @@
         "aksiya": "Promotions",
         "type_news": "News",
         "card1_title": "Construction of the Anhor project has begun – Premium restaurants and a hotel!",
-        "card1_more_title": "Ross Foundation announces the official start of construction for the Anhor project!",
+        "card1_more_title": "RAI GROUP announces the official start of construction for the Anhor project!",
         "card1_info": "This project, located on <b>Alisher Navoi Street</b>, will become one of the city's most prestigious locations with <b>premium restaurants and a luxurious hotel</b>. Built with <b>modern architecture, high-quality materials, and a unique design</b>, this complex will offer top-tier service to its guests.</br></br> <b>Stay updated with our news!</b> </br>📍 <b>Address</b>: Alisher Navoi Street </br> 🏗 <b>Project type</b>: Premium restaurants and a luxury hotel </br>📧 <b>Email</b>: <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a> </br>📞 <b>Phone</b>: <a href='tel: +998 99 986 70 07'> +998 99 986 70 07</a>",
         "card1_full_day": "March 20, 2025",
         "card1_day": "20/03/2025",
         "card2_title": "Rental has started at Nurafshon Business Center!",
-        "card2_more_title": "Ross Foundation has started leasing spaces in Nurafshon Business Center!",
+        "card2_more_title": "RAI GROUP has started leasing spaces in Nurafshon Business Center!",
         "card2_info": "Located at Nurafshon Street, Tarikh 69, this 7-story business center with an underground floor offers stunning views from the upper floors and is an ideal location for restaurants, offices, coworking spaces, cafes, and other business activities.</br></br>Why choose Nurafshon Business Center?</br>✅ Modern office spaces – Spacious and comfortable interiors </br>✅ Panoramic views from upper floors – Enhance your work environment </br>✅ Flexible rental conditions – Short-term and long-term lease options </br>✅ Suitable for various business types – Restaurants, offices, coworking, cafes, and more </br>✅ Modern infrastructure – High-speed internet, 24/7 security, and technical support </br>✅ Convenient location – Close to major business hubs</br></br>💼 <b>Rent office and commercial spaces now!</b> </br>📍 <b>Address</b>: Nurafshon Street, Tarikh 69 </br>📧 <b>Email</b>: <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a> </br>📞 <b>Phone</b>: <a href='tel: +998 99 986 70 07'> +998 99 986 70 07</a>",
         "card2_full_day": "March 20, 2025",
         "card2_day": "20/03/2025",
-        "card3_title": "Ross Foundation is hiring!",
-        "card3_more_title": "Ross Foundation is expanding and looking for experienced professionals to strengthen our construction team. If you are looking for a stable and promising career in construction, we would love to see you on our team!",
+        "card3_title": "RAI GROUP is hiring!",
+        "card3_more_title": "RAI GROUP is expanding and looking for experienced professionals to strengthen our construction team. If you are looking for a stable and promising career in construction, we would love to see you on our team!",
         "card3_info": "<b>Open positions:</b> </br> Electrician </br> Plumber </br> Foreman (Project Manager) </br> Construction Manager </br> <b>We offer:</b> </br>✅ Competitive salary based on experience </br>✅ Stable job with career growth opportunities </br>✅ Friendly and professional team </br>✅ Opportunity to participate in large construction projects </br> <b>Who are we looking for?</b> </br> We are looking for responsible and experienced professionals who strive for high-quality work. Experience in construction is preferred.</br></br> <b>How to apply:</b> </br> Visit the 'Vacancies' section of our website for more details. To apply, send your resume via email or contact us by phone. </br></br> 📧 <b>Email</b>: <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a> </br>📞 <b>Phone</b>: <a href='tel: +998 99 986 70 07'> +998 99 986 70 07</a>",
         "card3_full_day": "March 20, 2025",
         "card3_day": "20/03/2025"
@@ -140,11 +141,11 @@
         "vacancies1_role": "Foreman",
         "vacancies1_direction": "Foreman",
         "vacancies1_format": "Office Work or Hybrid Format",
-        "vacancies1_more": "<h2 className='text-center'>VACANCY: FOREMAN – ROSS FOUNDATION CONSTRUCTION COMPANY</h2> <b>Ross Foundation</b> is a construction company with 5 years of experience, looking for a <b>foreman</b> to manage construction sites. </br> <b>Responsibilities:</b> </br> • Organizing and supervising construction works on-site. </br> • Coordinating workers and subcontractors. </br> • Controlling deadlines and quality of work. </br> • Maintaining construction documentation. </br> • Ensuring compliance with safety regulations.</br> <b>Requirements:</b></br> • At least 3 years of experience as a foreman. </br> • Knowledge of construction standards and technologies. </br>• Ability to read drawings and project documents.</br> • Responsibility and organizational skills.</br> <b>Conditions:</b> </br> • Official employment. </br> • Competitive salary. </br> • Paid transport and accommodation (if needed).</br> • Work in a stable and growing company. </br> </br> 📩 <b>To Apply:</b></br> 📞 <b>Phone:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>Join Ross Foundation and grow with us!</b>",
+        "vacancies1_more": "<h2 className='text-center'>VACANCY: FOREMAN – RAI GROUP CONSTRUCTION COMPANY</h2> <b>RAI GROUP</b> is a construction company with 5 years of experience, looking for a <b>foreman</b> to manage construction sites. </br> <b>Responsibilities:</b> </br> • Organizing and supervising construction works on-site. </br> • Coordinating workers and subcontractors. </br> • Controlling deadlines and quality of work. </br> • Maintaining construction documentation. </br> • Ensuring compliance with safety regulations.</br> <b>Requirements:</b></br> • At least 3 years of experience as a foreman. </br> • Knowledge of construction standards and technologies. </br>• Ability to read drawings and project documents.</br> • Responsibility and organizational skills.</br> <b>Conditions:</b> </br> • Official employment. </br> • Competitive salary. </br> • Paid transport and accommodation (if needed).</br> • Work in a stable and growing company. </br> </br> 📩 <b>To Apply:</b></br> 📞 <b>Phone:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>Join RAI GROUP and grow with us!</b>",
         "vacancies2_role": "Construction Manager",
         "vacancies2_direction": "Construction Manager",
         "vacancies2_format": "Office Work",
-        "vacancies2_more": "<h2 className='text-center'>VACANCY: CONSTRUCTION MANAGER – ROSS FOUNDATION COMPANY</h2> <b>Ross Foundation</b> is a construction company with 5 years of experience, looking for a <b>construction manager</b> to coordinate projects and oversee construction processes. </br> <b>Responsibilities:</b> </br> • Organizing and supervising construction works. </br> • Managing projects: planning, deadlines, and budget control. </br> • Collaborating with contractors, clients, and designers. </br> • Ensuring quality control and compliance with construction standards. </br> • Handling project documentation and reporting.</br> <b>Requirements:</b></br> • At least 3 years of experience as a construction manager/foreman. </br> • Higher or secondary specialized education in construction. </br>• Knowledge of construction technologies, SNiP, and safety regulations.</br> • Team management and negotiation skills.</br> • Organizational skills, responsibility, and multitasking ability.</br> <b>Conditions:</b> </br> • Official employment. </br> • Competitive salary. </br> • Transport cost reimbursement.</br> • Career growth in a stable company. </br> </br> 📩 <b>To Apply:</b></br> 📞 <b>Phone:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>Join Ross Foundation and grow with us!</b>"
+        "vacancies2_more": "<h2 className='text-center'>VACANCY: CONSTRUCTION MANAGER – RAI GROUP COMPANY</h2> <b>RAI GROUP</b> is a construction company with 5 years of experience, looking for a <b>construction manager</b> to coordinate projects and oversee construction processes. </br> <b>Responsibilities:</b> </br> • Organizing and supervising construction works. </br> • Managing projects: planning, deadlines, and budget control. </br> • Collaborating with contractors, clients, and designers. </br> • Ensuring quality control and compliance with construction standards. </br> • Handling project documentation and reporting.</br> <b>Requirements:</b></br> • At least 3 years of experience as a construction manager/foreman. </br> • Higher or secondary specialized education in construction. </br>• Knowledge of construction technologies, SNiP, and safety regulations.</br> • Team management and negotiation skills.</br> • Organizational skills, responsibility, and multitasking ability.</br> <b>Conditions:</b> </br> • Official employment. </br> • Competitive salary. </br> • Transport cost reimbursement.</br> • Career growth in a stable company. </br> </br> 📩 <b>To Apply:</b></br> 📞 <b>Phone:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>Join RAI GROUP and grow with us!</b>"
     },
     "vacancies_form": {
         "title": "Submit an Application",
@@ -182,7 +183,7 @@
         "fact_card3": "24/7 security and video surveillance system",
         "fact_card4": "Pro Khinkali",
         "fact_card5": "ДУТЬ Lounge Bar",
-        "area": "2.5 ha",
+        "area": "25,000 m²",
         "area_title": "Project Area",
         "home_count": "2",
         "home_count_title": "Underground Floors",
@@ -235,7 +236,7 @@
         "fact_card3": "Secure and protected area",
         "fact_card4": "Comfortable and efficient work environment",
         "fact_card5": "Convenient transport and parking facilities",
-        "area": "0.28 ha",
+        "area": "2,800 m²",
         "area_title": "Project Area",
         "home_count": "1",
         "home_count_title": "Underground Floors",
@@ -293,7 +294,7 @@
         "fact_card3": "Warpoint VR Game Zone",
         "fact_card4": "High-quality service",
         "fact_card5": "Seamless integration with city infrastructure",
-        "area": "0.2 ha",
+        "area": "2,000 m²",
         "area_title": "Project Area",
         "home_count": "1",
         "home_count_title": "Underground Floors",
@@ -342,7 +343,7 @@
         "fact_card3": "An approach focused on enhancing education quality",
         "fact_card4": "Buildings with bright and comfortable learning spaces",
         "fact_card5": "A hub for scientific and technological development",
-        "area": "0.45 ha",
+        "area": "4,500 m²",
         "area_title": "Project Area",
         "floor": "4",
         "floor_title": "Number of Floors",
@@ -387,7 +388,7 @@
         "fact_card3": "Luxury premium-class hotel",
         "fact_card4": "Smart infrastructure for efficient business operations",
         "fact_card5": "Leading global brands, stores, and entertainment venues",
-        "area": "0.45 ha",
+        "area": "4,500 m²",
         "area_title": "Project Area",
         "home_count": "3",
         "home_count_title": "Underground Floors",
@@ -421,7 +422,7 @@
         "sports_complex": "",
         "sports_complex_location": "",
         "image_desc": "Anhor is a modern trade and hospitality complex located in the heart of Tashkent, on Alisher Navoi Street. Covering an area of 6,500 square meters, this project integrates restaurants, a hotel, and commercial facilities, creating a comfortable environment for business and leisure.",
-        "area": "0.65 ha",
+        "area": "6 500 m²",
         "area_title": "Project Area",
         "floor": "4",
         "floor_title": "Number of Floors",
@@ -451,7 +452,7 @@
         "sports_complex": "",
         "sports_complex_location": "",
         "image_desc": "Oncowell Company is a modern medical factory planned for construction in the Tashkent region. The enterprise specializes in the production of oncology medicines and plays an important role in the development of Uzbekistan’s pharmaceutical industry. The factory is located in the Tashkent Pharm Park industrial zone, covering an area of 15,000 square meters, with a total construction area of 4,000 square meters.",
-        "area": "1.5 ha",
+        "area": "15 000 m²",
         "area_title": "Project Area",
         "home_count": "2",
         "home_count_title": "Number of blocks",
@@ -485,10 +486,10 @@
         "links11": "Novus Towers",
         "links12": "Anhor",
         "links13": "Oncowell Company",
-        "title": "Ross Foundation",
+        "title": "RAI GROUP",
         "location": "Tashkent City, Yunusabad District, Abdulla Qodiriy Street, House 1A",
         "call_center": "Call Center",
         "text1": "© All rights reserved",
-        "text2": "© 2025 «Ross Foundation» LLC"
+        "text2": "© 2025 «RAI GROUP» LLC"
     }
 }
