--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -8,28 +8,28 @@
         "nav_button": "Konsultatsiya olish"
     },
     "hero": {
-        "title": "Ross Foundation",
+        "title": "RAI GROUP",
         "subtitle": "Qurilish, energetika va innovatsion yechimlar.",
         "button_text": "Konsultatsiya olish"
     },
     "vacancies_hero": {
-        "title": "Ross Foundation bilan orzuyingizdagi ishni toping",
+        "title": "RAI GROUP bilan orzuyingizdagi ishni toping",
         "subtitle": "Siz kutgan ayni jamoa!",
         "button_text": "Jamoaga qo'shilish"
     },
     "about": {
         "title": "KOMPANIYA HAQIDA",
-        "desc": "Ross Foundation - Ishonchli qurilish hamkoringiz <br/> 10 yillik tajriba bilan biznes markazlari va turar-joy binolari qurilishida yetakchi kompaniya! <br/> Ross and Foundation – Toshkentning zamonaviy arxitektura manzarasini yaratishda muhim o‘rin tutuvchi qurilish kompaniyasi. Biz 10 yildan beri biznes markazlari va yuqori sifatli turar-joy majmualarini barpo etib kelamiz.",
+        "desc": "RAI GROUP - Ishonchli qurilish hamkoringiz <br/> 6 yillik tajriba bilan biznes markazlari va turar-joy binolari qurilishida yetakchi kompaniya! <br/> Ross and Foundation – Toshkentning zamonaviy arxitektura manzarasini yaratishda muhim o‘rin tutuvchi qurilish kompaniyasi. Biz 10 yildan beri biznes markazlari va yuqori sifatli turar-joy majmualarini barpo etib kelamiz.",
         "card1_title": "Kompaniya portfelidagi loyihalar",
         "card1_desc": "4 ta",
         "card2_title": "Ko'chmas mulk bozorida",
         "card2_desc": "6 yil",
         "card3_title": "Bizning loyihalarimizda odamlar yashaydi",
         "card3_desc": "3000",
-        "card4_title": "Turar joy hududlari M2",
+        "card4_title": "Turar joy hududlari M²",
         "card4_desc": "34 300",
         "fact_title": "Kompaniya haqida 5 ta fakt",
-        "fact_desc": "Ross and Foundation – 10 yildan beri biznes markazlari va turar-joy majmualarini barpo etib kelayotgan ishonchli qurilish kompaniyasi. Biz yuqori sifat va zamonaviy dizaynni hamma uchun qulay va mavjud qilishga intilamiz. Loyihalarimiz nafaqat mustahkamligi, balki funksionalligi va qulay joylashuvi bilan ham ajralib turadi.",
+        "fact_desc": "RAI GROUP – 6 yildan beri biznes markazlari va turar-joy majmualarini barpo etib kelayotgan ishonchli qurilish kompaniyasi. Biz yuqori sifat va zamonaviy dizaynni hamma uchun qulay va mavjud qilishga intilamiz. Loyihalarimiz nafaqat mustahkamligi, balki funksionalligi va qulay joylashuvi bilan ham ajralib turadi.",
         "fact_card1": "Zamonaviy dizayn va funksionallik",
         "fact_card2": "Ishonchli hamkorlik",
         "fact_card3": "Yuqori sifatli materiallar",
@@ -57,7 +57,8 @@
         "card6_location": "Anhor bo'yi ko'chasi, Yunusobod tumani",
         "card7_title": "Oncowell Company",
         "card7_location": "",
-        "sold": "Sotib bo’lingan"
+        "sold": "Sotib bo’lingan",
+        "m":"m²"
     },
     "project_map": {
         "title": "Toshkent bo‘yicha Loyihalarimiz",
@@ -95,17 +96,17 @@
         "aksiya": "Aksiyalar",
         "type_news": "Yangiliklar",
         "card1_title": "Anhor loyihasining qurilishi boshlandi – Premium restoranlar va mehmonxona!",
-        "card1_more_title": "Ross Foundation kompaniyasi Anhor loyihasi qurilishining rasman boshlanganini e’lon qiladi!",
+        "card1_more_title": "RAI GROUP kompaniyasi Anhor loyihasi qurilishining rasman boshlanganini e’lon qiladi!",
         "card1_info": "Mazkur loyiha <b>Alisher Navoiy ko‘chasida</b> joylashgan bo‘lib, <b>premium restoranlar va hashamatli mehmonxona</b> bilan shaharning eng nufuzli maskanlaridan biriga aylanadi. <b>Zamonaviy arxitektura, sifatli materiallar va betakror dizayn</b> asosida qurilayotgan ushbu majmua mehmonlarga yuqori darajadagi xizmat ko‘rsatishni ta’minlaydi. </br></br> <b>Biz bilan yangiliklardan xabardor bo‘ling!</b> </br>📍 <b>Manzil</b>: Alisher Navoiy ko‘chasi </b> </br> 🏗 <b>Loyiha turi</b>: Premium restoranlar va hashamatli mehmonxona  </br>📧 <b>Email</b>: <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a>  </br>📞 <b>Telefon</b>: <a href='tel: +998 99 986 70 07'> +998 99 986 70 07</a>",
         "card1_full_day": "20 Mart 2025",
         "card1_day": "20/03/2025",
         "card2_title": "Nurafshon Biznes Markazida ijara boshlandi!  ",
-        "card2_more_title": "Ross Foundation kompaniyasi Nurafshon Biznes Markazi binolarini ijaraga berishni boshladi!",
+        "card2_more_title": "RAI GROUP kompaniyasi Nurafshon Biznes Markazi binolarini ijaraga berishni boshladi!",
         "card2_info": "Nurafshon ko‘chasi, Tarix 69 manzilida joylashgan 7 qavatli biznes markazi va bitta yer osti qavati yuqori qavatlardan ajoyib manzaralarni hamda restoranlar, ofislar, kоворking markazlari, kafelar va boshqa tadbirkorlik faoliyatlari uchun ideal joyni taqdim etadi.   </br> </br> Nega aynan Nurafshon Biznes Markazi?   </br>✅ Zamonaviy ofis maydonlari – Keng va qulay interyerlar </br>  ✅ Yuqori qavatlardan panoramik manzara – Ish muhitingizni yanada yaxshilang </br>  ✅ Moslashuvchan ijara shartlari – Qisqa va uzoq muddatli ijara imkoniyati  </br>✅ Har xil biznes turlari uchun qulay – Restoranlar, ofislar, kоворking, kafelar va boshqalar  </br>✅ Zamonaviy infratuzilma – Tezkor internet, 24/7 xavfsizlik va texnik xizmat  </br>✅ Qulay joylashuv – Muhim biznes markazlariga yaqinlik</br></br>💼 <b>Ofis va tijorat maydonlarini ijaraga oling!</b>  </br>📍 <b>Manzil</b>: Nurafshon ko‘chasi, Tarix 69  </br>📧 <b>Email</b>: <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a>  </br>📞 <b>Telefon</b>: <a href='tel: +998 99 986 70 07'> +998 99 986 70 07</a>",
         "card2_full_day": "20 Mart 2025",
         "card2_day": "20/03/2025",
-        "card3_title": "Ross Foundation ishga qabul qilmoqda!",
-        "card3_more_title": "Ross Foundation kompaniyasi kengaymoqda va qurilish jamoamizni kuchaytirish uchun tajribali mutaxassislarni ishga qabul qilmoqda. Agar siz qurilish sohasida barqaror va istiqbolli ish izlayotgan bo‘lsangiz, biz sizni jamoamizda ko‘rishdan mamnun bo‘lamiz!",
+        "card3_title": "RAI GROUP ishga qabul qilmoqda!",
+        "card3_more_title": "RAI GROUP kompaniyasi kengaymoqda va qurilish jamoamizni kuchaytirish uchun tajribali mutaxassislarni ishga qabul qilmoqda. Agar siz qurilish sohasida barqaror va istiqbolli ish izlayotgan bo‘lsangiz, biz sizni jamoamizda ko‘rishdan mamnun bo‘lamiz!",
         "card3_info": "<b>Bo‘sh ish o‘rinlari:</b> </br> Elektrik </br> Santexnik </br> Proраб (Obyekt boshqaruvchisi) </br> Qurilish menejeri </br> <b>Biz taklif qilamiz:</b> </br>✅ Tajribaga qarab raqobatbardosh ish haqi </br> ✅ Barqaror ish va martaba o‘sish imkoniyatlari </br> ✅ Do‘stona va professional jamoa </br> ✅ Yirik qurilish loyihalarida ishtirok etish imkoniyati </br> <b>Kimni qidirmoqdamiz:</b> </br> Biz o‘z sohasida tajribaga ega, mas'uliyatli va yuqori sifatli ish olib borishga intiladigan mutaxassislarni izlayapmiz. Qurilish sohasidagi tajriba ma’qul keladi. </br></br> <b>Qanday ariza topshirish mumkin:</b> </br> Batafsil ma’lumot uchun veb-saytimizning 'Vakansiyalar' bo‘limiga tashrif buyuring. Ariza topshirish uchun rezyumeni elektron pochta orqali yuboring yoki telefon orqali bog‘laning. </br></br> 📧 <b>Email</b>: <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a>  </br>📞 <b>Telefon</b>: <a href='tel: +998 99 986 70 07'> +998 99 986 70 07</a>",
         "card3_full_day": "20 Mart 2025",
         "card3_day": "20/03/2025"
@@ -140,11 +141,11 @@
         "vacancies1_role": "Prorab",
         "vacancies1_direction": "Prorab",
         "vacancies1_format": "Ofisda ishlash yoki Aralash format",
-        "vacancies1_more": "<h2 className='text-center'>VAKANSIYA: ISH BOSHQARUVCHI (PRORAB) – ROSS FOUNDATION QURILISH KOMPANIYASI</h2> <b>Ross Foundation</b> qurilish kompaniyasi 5 yillik tajribaga ega bo‘lib, qurilish obyektlarida ishlash uchun <b>ish boshqaruvchi (prorab)</b> qidirmoqda. </br> <b>Vazifalar:</b> </br> • Obyektda qurilish ishlarini tashkil etish va nazorat qilish. </br> • Ishchilar va pudratchilar ishini muvofiqlashtirish. </br> • Bajariladigan ishlarning muddati va sifatini nazorat qilish. </br> • Qurilish hujjatlarini yuritish. </br> • Obyektda xavfsizlik texnikasiga rioya qilish.</br> <b>Talablar:</b></br> • Prorab sifatida kamida 3 yillik ish tajribasi. </br>  • Qurilish me’yorlari va texnologiyalarini bilish. </br>• Chizma va loyiha hujjatlarini o‘qiy olish.</br> • Mas’uliyat, tashkilotchilik qobiliyati.</br> <b>Shartlar</b> </br> • Rasmiy ishga joylashish. </br> • Raqobatbardosh ish haqi. </br> • To‘lovli transport va turar joy (agar kerak bo‘lsa).</br> • Barqaror va rivojlanayotgan kompaniyada ishlash. </br> </br> 📩 <b>Ariza topshirish uchun:</b></br> 📞 <b>Telefon:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>Ross Foundation jamoasiga qo‘shiling va biz bilan birga o‘sib rivojlaning!</b>",
+        "vacancies1_more": "<h2 className='text-center'>VAKANSIYA: ISH BOSHQARUVCHI (PRORAB) – RAI GROUP QURILISH KOMPANIYASI</h2> <b>RAI GROUP</b> qurilish kompaniyasi 5 yillik tajribaga ega bo‘lib, qurilish obyektlarida ishlash uchun <b>ish boshqaruvchi (prorab)</b> qidirmoqda. </br> <b>Vazifalar:</b> </br> • Obyektda qurilish ishlarini tashkil etish va nazorat qilish. </br> • Ishchilar va pudratchilar ishini muvofiqlashtirish. </br> • Bajariladigan ishlarning muddati va sifatini nazorat qilish. </br> • Qurilish hujjatlarini yuritish. </br> • Obyektda xavfsizlik texnikasiga rioya qilish.</br> <b>Talablar:</b></br> • Prorab sifatida kamida 3 yillik ish tajribasi. </br>  • Qurilish me’yorlari va texnologiyalarini bilish. </br>• Chizma va loyiha hujjatlarini o‘qiy olish.</br> • Mas’uliyat, tashkilotchilik qobiliyati.</br> <b>Shartlar</b> </br> • Rasmiy ishga joylashish. </br> • Raqobatbardosh ish haqi. </br> • To‘lovli transport va turar joy (agar kerak bo‘lsa).</br> • Barqaror va rivojlanayotgan kompaniyada ishlash. </br> </br> 📩 <b>Ariza topshirish uchun:</b></br> 📞 <b>Telefon:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>RAI GROUP jamoasiga qo‘shiling va biz bilan birga o‘sib rivojlaning!</b>",
         "vacancies2_role": "Qurilish bo'yicha menejer",
         "vacancies2_direction": "Dizayn, mahsulot va arxitektura boshqaruvi",
         "vacancies2_format": "Ofisda ishlash",
-        "vacancies2_more": "<h2 className='text-center'>VAKANSIYA: QURILISH BO‘YICHA MENEJER – ROSS FOUNDATION KOMPANIYASI</h2> <b>Ross Foundation</b>qurilish kompaniyasi 5 yillik tajribaga ega bo‘lib, loyihalarni muvofiqlashtirish va qurilish obyektlaridagi jarayonlarni boshqarish uchun qurilish bo‘yicha <b>menejer</b> qidirmoqda. </br> <b>Vazifalar:</b> </br> • Qurilish ishlarini tashkil etish va nazorat qilish. </br> • Loyihalarni boshqarish: rejalashtirish, muddat va byudjet nazorati. </br> • Pudratchilar, buyurtmachilar va loyihachilar bilan hamkorlik qilish. </br> • Ish sifatini va qurilish me’yorlariga rioya qilinishini nazorat qilish. </br> • Loyihaga oid hujjatlar va hisobotlarni yuritish.</br> <b>Talablar:</b></br> • Qurilish bo‘yicha menejer / ish boshqaruvchi sifatida kamida 3 yillik tajriba. </br>  • Qurilish sohasi bo‘yicha oliy yoki o‘rta maxsus ma’lumot. </br>• Qurilish texnologiyalari, SNiP va xavfsizlik me’yorlarini bilish.</br> • Jamoani boshqarish va muzokaralar olib borish ko‘nikmalari.</br> • Tashkiliy qobiliyat, mas’uliyat, ko‘p vazifali rejimda ishlash qobiliyati.</br> <b>Shartlar</b> </br> • Rasmiy ishga joylashish. </br> • Raqobatbardosh ish haqi. </br> • Transport xarajatlarini qoplash.</br> • Barqaror kompaniyada ish va o‘sish imkoniyatlari. </br> </br> 📩 <b>Ariza topshirish uchun:</b></br> 📞 <b>Telefon:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>Ross Foundation jamoasiga qo‘shiling va biz bilan birga o‘sib rivojlaning!</b>"
+        "vacancies2_more": "<h2 className='text-center'>VAKANSIYA: QURILISH BO‘YICHA MENEJER – RAI GROUP KOMPANIYASI</h2> <b>RAI GROUP</b>qurilish kompaniyasi 5 yillik tajribaga ega bo‘lib, loyihalarni muvofiqlashtirish va qurilish obyektlaridagi jarayonlarni boshqarish uchun qurilish bo‘yicha <b>menejer</b> qidirmoqda. </br> <b>Vazifalar:</b> </br> • Qurilish ishlarini tashkil etish va nazorat qilish. </br> • Loyihalarni boshqarish: rejalashtirish, muddat va byudjet nazorati. </br> • Pudratchilar, buyurtmachilar va loyihachilar bilan hamkorlik qilish. </br> • Ish sifatini va qurilish me’yorlariga rioya qilinishini nazorat qilish. </br> • Loyihaga oid hujjatlar va hisobotlarni yuritish.</br> <b>Talablar:</b></br> • Qurilish bo‘yicha menejer / ish boshqaruvchi sifatida kamida 3 yillik tajriba. </br>  • Qurilish sohasi bo‘yicha oliy yoki o‘rta maxsus ma’lumot. </br>• Qurilish texnologiyalari, SNiP va xavfsizlik me’yorlarini bilish.</br> • Jamoani boshqarish va muzokaralar olib borish ko‘nikmalari.</br> • Tashkiliy qobiliyat, mas’uliyat, ko‘p vazifali rejimda ishlash qobiliyati.</br> <b>Shartlar</b> </br> • Rasmiy ishga joylashish. </br> • Raqobatbardosh ish haqi. </br> • Transport xarajatlarini qoplash.</br> • Barqaror kompaniyada ish va o‘sish imkoniyatlari. </br> </br> 📩 <b>Ariza topshirish uchun:</b></br> 📞 <b>Telefon:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>RAI GROUP jamoasiga qo‘shiling va biz bilan birga o‘sib rivojlaning!</b>"
     },
     "vacancies_form": {
         "title": "Ariza qoldirish",
@@ -182,7 +183,7 @@
         "fact_card3": "24/7 xavfsizlik va video nazorat tizimi",
         "fact_card4": "Pro Xinkali",
         "fact_card5": "ДУТЬ Lounge Bar",
-        "area": "2.5 ga",
+        "area": "25,000 m²",
         "area_title": "Loyiha maydoni",
         "home_count": "2",
         "home_count_title": "Yerosti qavatlar",
@@ -235,7 +236,7 @@
         "fact_card3": "Xavfsiz va muhofazalangan hudud",
         "fact_card4": "Qulay va samarali ish muhiti",
         "fact_card5": "Qulay transport va avtoturargoh imkoniyatlari",
-        "area": "0.28 ga",
+        "area": "2,800 m²",
         "area_title": "Loyiha maydoni",
         "home_count": "1",
         "home_count_title": "Yerosti qavatlar",
@@ -293,7 +294,7 @@
         "fact_card3": "Warpoint VR Game Zone",
         "fact_card4": "Yuqori sifatli xizmat ko‘rsatish",
         "fact_card5": "Shahar infratuzilmasi bilan uyg‘un joylashuv",
-        "area": "0.2 ga",
+        "area": "2,000 m²",
         "area_title": "Loyiha maydoni",
         "home_count": "1",
         "home_count_title": "Yerosti qavatlar",
@@ -342,7 +343,7 @@
         "fact_card3": "Ta’lim sifatini oshirishga yo‘naltirilgan yondashuv",
         "fact_card4": "Yorug‘ va qulay o‘quv muhitiga ega binolar",
         "fact_card5": "Ilmiy va texnologik rivojlanish markazi",
-        "area": "0.45 ga",
+        "area": "4,500 m²",
         "area_title": "Loyiha maydoni",
         "floor": "4",
         "floor_title": "Qavatlar soni",
@@ -387,7 +388,7 @@
         "fact_card3": " Premium darajadagi hashamatli mehmonxona",
         "fact_card4": "Samarali ishlash uchun aqlli infratuzilma",
         "fact_card5": "Dunyoning yetakchi brendlari, do‘konlar va ko‘ngilochar joylar",
-        "area": "0.45 ga",
+        "area": "4,500 m²",
         "area_title": "Loyiha maydoni",
         "home_count": "3",
         "home_count_title": "Yerosti qavatlar",
@@ -421,7 +422,7 @@
         "sports_complex": "",
         "sports_complex_location": "",
         "image_desc": "Anhor – Toshkent shahrining markazida, Alisher Navoiy ko‘chasida joylashgan zamonaviy savdo va mehmondo‘stlik majmuasi bo‘lib, biznes va dam olish uchun qulay sharoit yaratadi. 6 500 kvadrat metr maydonni egallagan ushbu loyihada restoranlar, mehmonxona va tijorat ob’ektlari uyg‘unlashgan.",
-        "area": "0.65 ga",
+        "area": "6 500 m²",
         "area_title": "Loyiha maydoni",
         "floor": "4",
         "floor_title": "Qavatlar soni",
@@ -451,7 +452,7 @@
         "sports_complex": "",
         "sports_complex_location": "",
         "image_desc": "Oncowell Company – Toshkent viloyatida qurilishi rejalashtirilgan zamonaviy tibbiyot fabrikasi. Ushbu korxona onkologiya dori vositalarini ishlab chiqarishga ixtisoslashgan bo‘lib, O‘zbekistonda farmatsevtika sanoatini rivojlantirishda muhim rol o‘ynaydi. Fabrika Toshkent Pharm Park sanoat hududida joylashgan bo‘lib, 15 000 kvadrat metr yer maydonini egallaydi, umumiy qurilish maydoni esa 4 000 kvadrat metrni tashkil etadi.",
-        "area": "1.5 ga",
+        "area": "15 000 m²",
         "area_title": "Loyiha maydoni",
         "home_count": "2",
         "home_count_title": "Bloklar soni",
@@ -485,10 +486,10 @@
         "links11": "Novus Towers",
         "links12": "Anhor",
         "links13": "Oncowell Company",
-        "title": "Ross Foundation",
+        "title": "RAI GROUP",
         "location": "Toshkent shahri, Yunusobod tumani, Abdulla Qodiriy ko‘chasi, 1A-uy",
         "call_center": "Call center",
         "text1": "© Barcha huquqlar himoyalangan",
-        "text2": "© 2025 «Ross Foundation» MChJ"
+        "text2": "© 2025 «RAI GROUP» MChJ"
     }
 }
