--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -8,28 +8,28 @@
         "nav_button": "Получить консультацию"
     },
     "hero": {
-        "title": "Ross Foundation",
+        "title": "RAI GROUP",
         "subtitle": "Строительство, энергетика и инновационные решения.",
         "button_text": "Получить консультацию"
     },
     "vacancies_hero": {
-        "title": "Найдите работу мечты с Ross Foundation",
+        "title": "Найдите работу мечты с RAI GROUP",
         "subtitle": "Команда, которую вы ждали!",
         "button_text": "Присоединиться к команде"
     },
     "about": {
         "title": "О КОМПАНИИ",
-        "desc": "Ross and Foundation – Надежный партнер в строительстве <br/> 10 лет опыта в строительстве бизнес-центров и жилых комплексов! <br/> Ross and Foundation – строительная компания, играющая важную роль в формировании современного архитектурного облика Ташкента. На протяжении 10 лет мы создаем бизнес-центры и высококачественные жилые комплексы.",
+        "desc": "RAI GROUP – Надежный партнер в строительстве <br/> 6 лет опыта в строительстве бизнес-центров и жилых комплексов! <br/> Ross and Foundation – строительная компания, играющая важную роль в формировании современного архитектурного облика Ташкента. На протяжении 10 лет мы создаем бизнес-центры и высококачественные жилые комплексы.",
         "card1_title": "Проекты в портфеле компании",
         "card1_desc": "4",
         "card2_title": "На рынке недвижимости",
         "card2_desc": "6 лет",
         "card3_title": "Люди живут в наших проектах",
         "card3_desc": "3000",
-        "card4_title": "Жилые площади M2",
+        "card4_title": "Жилые площади М²",
         "card4_desc": "34 300",
         "fact_title": "5 фактов о компании",
-        "fact_desc": "Ross and Foundation – надежная строительная компания, создающая бизнес-центры и жилые комплексы уже 10 лет. Мы стремимся сделать высокое качество и современный дизайн доступными для всех. Наши проекты отличаются не только прочностью, но и функциональностью, а также удобным расположением.",
+        "fact_desc": "RAI GROUP – надежная строительная компания, создающая бизнес-центры и жилые комплексы уже 6 лет. Мы стремимся сделать высокое качество и современный дизайн доступными для всех. Наши проекты отличаются не только прочностью, но и функциональностью, а также удобным расположением.",
         "fact_card1": "Современный дизайн и функциональность",
         "fact_card2": "Надежное партнерство",
         "fact_card3": "Высококачественные материалы",
@@ -57,7 +57,8 @@
         "card6_location": "Улица Анхор Бойи, Юнусабадский район",
         "card7_title": "Oncowell Company",
         "card7_location": "",
-        "sold": "Продано"
+        "sold": "Продано",
+        "m":"м²"
     },
     "project_map": {
         "title": "Наши проекты в Ташкенте",
@@ -95,17 +96,17 @@
         "aksiya": "Акции",
         "type_news": "Новости",
         "card1_title": "Начато строительство проекта Анхор – Премиум-рестораны и отель!",
-        "card1_more_title": "Компания Ross Foundation объявляет о начале строительства проекта Анхор!",
+        "card1_more_title": "Компания RAI GROUP объявляет о начале строительства проекта Анхор!",
         "card1_info": "Проект, расположенный на <b>улице Алишера Навои</b>, станет одной из самых престижных локаций города благодаря <b>премиум-ресторанам и роскошному отелю</b>. Этот комплекс, построенный с использованием <b>современной архитектуры, качественных материалов и уникального дизайна</b>, обеспечит своим гостям обслуживание на высшем уровне.</br></br> <b>Следите за нашими новостями!</b> </br>📍 <b>Адрес</b>: улица Алишера Навои </br> 🏗 <b>Тип проекта</b>: Премиум-рестораны и роскошный отель </br>📧 <b>Email</b>: <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a> </br>📞 <b>Телефон</b>: <a href='tel: +998 99 986 70 07'> +998 99 986 70 07</a>",
         "card1_full_day": "20 марта 2025",
         "card1_day": "20/03/2025",
         "card2_title": "Аренда в бизнес-центре Нурафшон началась!",
-        "card2_more_title": "Компания Ross Foundation начала сдавать в аренду помещения в бизнес-центре Нурафшон!",
+        "card2_more_title": "Компания RAI GROUP начала сдавать в аренду помещения в бизнес-центре Нурафшон!",
         "card2_info": "Бизнес-центр, расположенный на улице Нурафшон, Тарих 69, представляет собой 7-этажное здание с подземным этажом. Оно предлагает великолепные виды с верхних этажей и является идеальным местом для ресторанов, офисов, коворкингов и кафе.</br></br>Почему стоит выбрать бизнес-центр Нурафшон?</br>✅ Современные офисные помещения – Просторные и удобные интерьеры </br>✅ Панорамные виды с верхних этажей – Улучшите рабочую атмосферу </br>✅ Гибкие условия аренды – Возможность краткосрочной и долгосрочной аренды </br>✅ Подходит для различных видов бизнеса – Рестораны, офисы, коворкинг, кафе и многое другое </br>✅ Современная инфраструктура – Высокоскоростной интернет, круглосуточная охрана и техническое обслуживание </br>✅ Удобное расположение – Близость к важным бизнес-центрам</br></br>💼 <b>Арендуйте офисные и коммерческие помещения уже сейчас!</b> </br>📍 <b>Адрес</b>: улица Нурафшон, Тарих 69 </br>📧 <b>Email</b>: <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a> </br>📞 <b>Телефон</b>: <a href='tel: +998 99 986 70 07'> +998 99 986 70 07</a>",
         "card2_full_day": "20 марта 2025",
         "card2_day": "20/03/2025",
-        "card3_title": "Ross Foundation приглашает на работу!",
-        "card3_more_title": "Компания Ross Foundation расширяется и ищет опытных специалистов для усиления нашей строительной команды. Если вы ищете стабильную и перспективную работу в строительной сфере, мы будем рады видеть вас в нашей команде!",
+        "card3_title": "RAI GROUP приглашает на работу!",
+        "card3_more_title": "Компания RAI GROUP расширяется и ищет опытных специалистов для усиления нашей строительной команды. Если вы ищете стабильную и перспективную работу в строительной сфере, мы будем рады видеть вас в нашей команде!",
         "card3_info": "<b>Открытые вакансии:</b> </br> Электрик </br> Сантехник </br> Прораб (Менеджер объекта) </br> Менеджер по строительству </br> <b>Мы предлагаем:</b> </br>✅ Конкурентоспособную заработную плату в зависимости от опыта </br>✅ Стабильную работу с возможностями карьерного роста </br>✅ Дружный и профессиональный коллектив </br>✅ Возможность участвовать в крупных строительных проектах </br> <b>Кого мы ищем?</b> </br> Мы ищем ответственных и опытных специалистов, которые стремятся выполнять работу качественно. Опыт в строительной сфере приветствуется.</br></br> <b>Как подать заявку:</b> </br> Посетите раздел 'Вакансии' на нашем сайте для получения более подробной информации. Чтобы подать заявку, отправьте резюме по электронной почте или свяжитесь с нами по телефону. </br></br> 📧 <b>Email</b>: <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a> </br>📞 <b>Телефон</b>: <a href='tel: +998 99 986 70 07'> +998 99 986 70 07</a>",
         "card3_full_day": "20 марта 2025",
         "card3_day": "20/03/2025"
@@ -140,11 +141,11 @@
         "vacancies1_role": "Прораб",
         "vacancies1_direction": "Прораб",
         "vacancies1_format": "Работа в офисе или смешанный формат",
-        "vacancies1_more": "<h2 className='text-center'>ВАКАНСИЯ: ПРОРАБ – СТРОИТЕЛЬНАЯ КОМПАНИЯ ROSS FOUNDATION</h2> <b>Ross Foundation</b> – строительная компания с 5-летним опытом, ищет <b>прораба</b> для работы на строительных объектах. </br> <b>Обязанности:</b> </br> • Организация и контроль строительных работ на объекте. </br> • Координация работы рабочих и подрядчиков. </br> • Контроль сроков и качества выполнения работ. </br> • Ведение строительной документации. </br> • Соблюдение техники безопасности на объекте.</br> <b>Требования:</b></br> • Опыт работы прорабом минимум 3 года. </br> • Знание строительных норм и технологий. </br>• Умение читать чертежи и проектную документацию.</br> • Ответственность, организаторские способности.</br> <b>Условия:</b> </br> • Официальное трудоустройство. </br> • Конкурентоспособная зарплата. </br> • Оплачиваемый транспорт и жилье (при необходимости).</br> • Работа в стабильной и развивающейся компании. </br> </br> 📩 <b>Для подачи заявки:</b></br> 📞 <b>Телефон:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>Присоединяйтесь к команде Ross Foundation и развивайтесь вместе с нами!</b>",
+        "vacancies1_more": "<h2 className='text-center'>ВАКАНСИЯ: ПРОРАБ – СТРОИТЕЛЬНАЯ КОМПАНИЯ RAI GROUP</h2> <b>RAI GROUP</b> – строительная компания с 5-летним опытом, ищет <b>прораба</b> для работы на строительных объектах. </br> <b>Обязанности:</b> </br> • Организация и контроль строительных работ на объекте. </br> • Координация работы рабочих и подрядчиков. </br> • Контроль сроков и качества выполнения работ. </br> • Ведение строительной документации. </br> • Соблюдение техники безопасности на объекте.</br> <b>Требования:</b></br> • Опыт работы прорабом минимум 3 года. </br> • Знание строительных норм и технологий. </br>• Умение читать чертежи и проектную документацию.</br> • Ответственность, организаторские способности.</br> <b>Условия:</b> </br> • Официальное трудоустройство. </br> • Конкурентоспособная зарплата. </br> • Оплачиваемый транспорт и жилье (при необходимости).</br> • Работа в стабильной и развивающейся компании. </br> </br> 📩 <b>Для подачи заявки:</b></br> 📞 <b>Телефон:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>Присоединяйтесь к команде RAI GROUP и развивайтесь вместе с нами!</b>",
         "vacancies2_role": "Менеджер по строительству",
         "vacancies2_direction": "Менеджер по строительству",
         "vacancies2_format": "Работа в офисе",
-        "vacancies2_more": "<h2 className='text-center'>ВАКАНСИЯ: МЕНЕДЖЕР ПО СТРОИТЕЛЬСТВУ – КОМПАНИЯ ROSS FOUNDATION</h2> <b>Ross Foundation</b> – строительная компания с 5-летним опытом, ищет <b>менеджера по строительству</b> для координации проектов и управления процессами на объектах. </br> <b>Обязанности:</b> </br> • Организация и контроль строительных работ. </br> • Управление проектами: планирование, контроль сроков и бюджета. </br> • Взаимодействие с подрядчиками, заказчиками и проектировщиками. </br> • Контроль качества работ и соблюдения строительных норм. </br> • Ведение документации и отчетности по проектам.</br> <b>Требования:</b></br> • Опыт работы менеджером по строительству/прорабом не менее 3 лет. </br> • Высшее или среднее специальное образование в строительной сфере. </br>• Знание строительных технологий, СНиП и норм безопасности.</br> • Навыки управления командой и ведения переговоров.</br> • Организаторские способности, ответственность, многозадачность.</br> <b>Условия:</b> </br> • Официальное трудоустройство. </br> • Конкурентоспособная зарплата. </br> • Компенсация транспортных расходов.</br> • Возможности роста в стабильной компании. </br> </br> 📩 <b>Для подачи заявки:</b></br> 📞 <b>Телефон:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>Присоединяйтесь к команде Ross Foundation и развивайтесь вместе с нами!</b>"
+        "vacancies2_more": "<h2 className='text-center'>ВАКАНСИЯ: МЕНЕДЖЕР ПО СТРОИТЕЛЬСТВУ – КОМПАНИЯ RAI GROUP</h2> <b>RAI GROUP</b> – строительная компания с 5-летним опытом, ищет <b>менеджера по строительству</b> для координации проектов и управления процессами на объектах. </br> <b>Обязанности:</b> </br> • Организация и контроль строительных работ. </br> • Управление проектами: планирование, контроль сроков и бюджета. </br> • Взаимодействие с подрядчиками, заказчиками и проектировщиками. </br> • Контроль качества работ и соблюдения строительных норм. </br> • Ведение документации и отчетности по проектам.</br> <b>Требования:</b></br> • Опыт работы менеджером по строительству/прорабом не менее 3 лет. </br> • Высшее или среднее специальное образование в строительной сфере. </br>• Знание строительных технологий, СНиП и норм безопасности.</br> • Навыки управления командой и ведения переговоров.</br> • Организаторские способности, ответственность, многозадачность.</br> <b>Условия:</b> </br> • Официальное трудоустройство. </br> • Конкурентоспособная зарплата. </br> • Компенсация транспортных расходов.</br> • Возможности роста в стабильной компании. </br> </br> 📩 <b>Для подачи заявки:</b></br> 📞 <b>Телефон:</b> <a href='tel:+998 99 986 70 07'>+998 99 986 70 07</a></br> 📧 <b>Email:</b> <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a></br> <b>Присоединяйтесь к команде RAI GROUP и развивайтесь вместе с нами!</b>"
     },
     "vacancies_form": {
         "title": "Оставить заявку",
@@ -182,7 +183,7 @@
         "fact_card3": "Круглосуточная охрана и система видеонаблюдения",
         "fact_card4": "Pro Хинкали",
         "fact_card5": "ДУТЬ Lounge Bar",
-        "area": "2.5 га",
+        "area": "25 000 м²",
         "area_title": "Площадь проекта",
         "home_count": "2",
         "home_count_title": "Подземные этажи",
@@ -235,7 +236,7 @@
         "fact_card3": "Безопасная и охраняемая территория",
         "fact_card4": "Комфортная и эффективная рабочая среда",
         "fact_card5": "Удобная транспортная развязка и парковка",
-        "area": "0.28 га",
+        "area": "2 800 м²",
         "area_title": "Площадь проекта",
         "home_count": "1",
         "home_count_title": "Подземные этажи",
@@ -293,7 +294,7 @@
         "fact_card3": "Warpoint VR Game Zone",
         "fact_card4": "Высококачественное обслуживание",
         "fact_card5": "Гармоничное расположение в городской инфраструктуре",
-        "area": "0.2 га",
+        "area": "2 000 м²",
         "area_title": "Площадь проекта",
         "home_count": "1",
         "home_count_title": "Подземные этажи",
@@ -342,7 +343,7 @@
         "fact_card3": "Подход, направленный на повышение качества образования",
         "fact_card4": "Здания с просторными и комфортными учебными аудиториями",
         "fact_card5": "Центр научного и технологического развития",
-        "area": "0.45 га",
+        "area": "4 500 м²",
         "area_title": "Площадь проекта",
         "floor": "4",
         "floor_title": "Количество этажей",
@@ -387,7 +388,7 @@
         "fact_card3": "Роскошный премиум-отель",
         "fact_card4": "Умная инфраструктура для эффективного ведения бизнеса",
         "fact_card5": "Магазины ведущих мировых брендов и развлекательные зоны",
-        "area": "0.45 га",
+        "area": "4 500 м²",
         "area_title": "Площадь проекта",
         "home_count": "3",
         "home_count_title": "Подземные этажи",
@@ -428,7 +429,7 @@
         "fact_card3": "Подход, направленный на повышение качества образования",
         "fact_card4": "Просторные и комфортные учебные помещения",
         "fact_card5": "Центр научного и технологического развития",
-        "area": "0.65 га",
+        "area": "6 500 м²",
         "area_title": "Площадь проекта",
         "floor": "4",
         "floor_title": "Количество этажей",
@@ -458,7 +459,7 @@
         "sports_complex": "",
         "sports_complex_location": "",
         "image_desc": "Oncowell Company – это современный медицинский завод, запланированный к строительству в Ташкентской области. Предприятие специализируется на производстве онкологических препаратов и играет важную роль в развитии фармацевтической индустрии Узбекистана. Завод расположен в промышленной зоне Tashkent Pharm Park и занимает территорию 15 000 квадратных метров, а общая площадь застройки составляет 4 000 квадратных метров.",
-        "area": "1.5 га",
+        "area": "15 000 м²",
         "area_title": "Площадь проекта",
         "home_count": "2",
         "home_count_title": "Количество блоков",
@@ -492,10 +493,10 @@
         "links11": "Novus Towers",
         "links12": "Anhor",
         "links13": "Oncowell Company",
-        "title": "Ross Foundation",
+        "title": "RAI GROUP",
         "location": "Город Ташкент, Юнусабадский район, улица Абдуллы Кадыри, дом 1А",
         "call_center": "Колл-центр",
         "text1": "© Все права защищены",
-        "text2": "© 2025 «Ross Foundation» ООО"
+        "text2": "© 2025 «RAI GROUP» ООО"
     }
 }
