--- a/src/utils/i18n/locals/en/en.json
+++ b/src/utils/i18n/locals/en/en.json
@@ -19,7 +19,7 @@
     },
     "about": {
         "title": "ABOUT THE COMPANY",
-        "desc": "RAI GROUP – Your trusted construction partner <br/> 6 years of experience in building business centers and residential complexes! <br/> Ross and Foundation is a construction company playing a key role in shaping the modern architectural landscape of Tashkent. For 10 years, we have been creating business centers and high-quality residential complexes.",
+        "desc": "RAI GROUP – Your trusted construction partner <br/> 6 years of experience in building business centers and residential complexes! <br/> Rai Group is a construction company playing a key role in shaping the modern architectural landscape of Tashkent. For 6 years, we have been creating business centers and high-quality residential complexes.",
         "card1_title": "Projects in the company’s portfolio",
         "card1_desc": "4",
         "card2_title": "Years in the real estate market",
