--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -19,7 +19,7 @@
     },
     "about": {
         "title": "О КОМПАНИИ",
-        "desc": "RAI GROUP – Надежный партнер в строительстве <br/> 6 лет опыта в строительстве бизнес-центров и жилых комплексов! <br/> Ross and Foundation – строительная компания, играющая важную роль в формировании современного архитектурного облика Ташкента. На протяжении 10 лет мы создаем бизнес-центры и высококачественные жилые комплексы.",
+        "desc": "RAI GROUP – Надежный партнер в строительстве <br/> 6 лет опыта в строительстве бизнес-центров и жилых комплексов! <br/> Rai Group – строительная компания, играющая важную роль в формировании современного архитектурного облика Ташкента. На протяжении 6 лет мы создаем бизнес-центры и высококачественные жилые комплексы.",
         "card1_title": "Проекты в портфеле компании",
         "card1_desc": "4",
         "card2_title": "На рынке недвижимости",
