--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -19,7 +19,7 @@
     },
     "about": {
         "title": "KOMPANIYA HAQIDA",
-        "desc": "RAI GROUP - Ishonchli qurilish hamkoringiz <br/> 6 yillik tajriba bilan biznes markazlari va turar-joy binolari qurilishida yetakchi kompaniya! <br/> Ross and Foundation – Toshkentning zamonaviy arxitektura manzarasini yaratishda muhim o‘rin tutuvchi qurilish kompaniyasi. Biz 10 yildan beri biznes markazlari va yuqori sifatli turar-joy majmualarini barpo etib kelamiz.",
+        "desc": "RAI GROUP - Ishonchli qurilish hamkoringiz <br/> 6 yillik tajriba bilan biznes markazlari va turar-joy binolari qurilishida yetakchi kompaniya! <br/> Rai Group – Toshkentning zamonaviy arxitektura manzarasini yaratishda muhim o‘rin tutuvchi qurilish kompaniyasi. Biz 6 yildan beri biznes markazlari va yuqori sifatli turar-joy majmualarini barpo etib kelamiz.",
         "card1_title": "Kompaniya portfelidagi loyihalar",
         "card1_desc": "4 ta",
         "card2_title": "Ko'chmas mulk bozorida",
